<resources>
    <string name="app_name">有啥吃啥</string>
    <string name="title_activity_main_bottom">MainActivity_bottom</string>
    <string name="title_home">我的</string>
    <string name="title_message">消息</string>
    <string name="title_view">发现</string>
    <string name="title_upload">上传</string>
    <string name="title_homepage">首页</string>
    <string name="title_activity_jiachang_enter">jiachang_enter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>