<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_homepage"
        android:icon="@drawable/homepage"
        android:title="@string/title_homepage" />


    <item
        android:id="@+id/navigation_view"
        android:icon="@drawable/view"
        android:title="@string/title_view" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/icon_plus_mdpi"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/myhome"
        android:title="@string/title_home" />


</menu>